\newcommand{\PR}{\Sexpr[results=rd]{tools:::Rd_expr_PR(#1)}}

\name{NEWS}
\title{glmmADMB News}
\encoding{UTF-8}

\section{Changes in version 0.6.6 (2011-11-23)}{
  \itemize{
    \item SVN rev 147
    \item add identity, cloglog links
    \item stub for gaussian family (not yet working!)
    \item use tolower() on family
    \item add (experimental) predict() function
    \item comment on easyFlag
    \item move ZI_kluge to admbControl
    \item fix name assignment bug for random effect levels
    
  }
}
  
\section{Changes in version 0.6.5 (2011-10-22)}{
  \itemize{
    \item SVN rev 142
    \item BRANCH MERGE with alpha version
    \item added mcmcControl, admbControl
    \item added shess, noinit options (poorly documented)
    \item added scapeMCMC, ggplot2 to Suggests: (the latter for vignette use)
  }
}

\section{Changes in version 0.6.4 (2011-08-30)}{
  \itemize{
    \item new binaries
  }
}

\section{Changes in version 0.6.3 (2011-08-08)}{
  \itemize{
    \item include more buildbot binaries
    \item added nbinom1 option
    \item fixed phase bugs in nbinom
  }
}

\section{Changes in version 0.6.2}{
  \itemize{
    \item include sd of zero-inflation in output and summary
    \item include buildbot binaries
    \item more information when failing to find binaries
  }
}

\section{Changes in version 0.6.1 (2011-07-08)}{
  \itemize{
    \item Allow random effects to be specified separately in 'random' (i.e. as in 'old' glmmADMB)
    \item Add fixef() as synonym for coef(), for lme4-compatibility
    \item Add 'start' argument (poorly tested)
}}

\section{Changes in version 0.6 (2011-05-04)}{
  \itemize{
    \item Changed formula to lme4-style: random effects, and offsets,
    included within the formula
    \item Allow multiple random effects
    \item Turn off minimal zero-inflation in non-ZI models (pz was
    always 0.0001)
    \item Require grouping variables to be factors
    \item New families: Binomial with N>1, Gamma, stub for Beta