@@ -4,6 +4,15 @@
 \title{glmmADMB News}
 \encoding{UTF-8}
 
+\section{Changes in version 0.6.7 (2011-12-05)}{
+  \itemize{
+    \item SVN rev 148
+    \item added debug flag, debugging statements
+    \item attempt to avoid temporary-directory collisions
+    \item TPL file adds truncated Poisson (untested)
+  }
+}
+
 \section{Changes in version 0.6.6 (2011-11-23)}{
   \itemize{
     \item SVN rev 147
